parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> File
Rule 1     File -> OilVersion ImplementationDefinition ApplicationDefinition
Rule 2     OilVersion -> OIL_VERSION EQUAL Version Description SEMI
Rule 3     Version -> String
Rule 4     ImplementationDefinition -> IMPLEMENTATION Name LBRACE ImplementationSpecList RBRACE Description SEMI
Rule 5     ImplementationSpecList -> ImplementationSpec
Rule 6     ImplementationSpecList -> ImplementationSpecList ImplementationSpec
Rule 7     ImplementationSpec -> Object LBRACE ImplementationList RBRACE Description SEMI
Rule 8     Object -> OS
Rule 9     Object -> TASK
Rule 10    Object -> COUNTER
Rule 11    Object -> ALARM
Rule 12    Object -> RESOURCE
Rule 13    Object -> EVENT
Rule 14    Object -> ISR
Rule 15    Object -> MESSAGE
Rule 16    Object -> COM
Rule 17    Object -> NM
Rule 18    Object -> APPMODE
Rule 19    Object -> IPDU
Rule 20    ImplementationList -> empty
Rule 21    ImplementationList -> ImplementationDef
Rule 22    ImplementationList -> ImplementationList ImplementationDef
Rule 23    ImplementationDef -> ImplAttrDef
Rule 24    ImplementationDef -> ImplRefDef
Rule 25    ImplAttrDef -> UINT32 AutoSpecifier NumberRange AttributeName MultipleSpecifier DefaultNumber Description SEMI
Rule 26    ImplAttrDef -> INT32 AutoSpecifier NumberRange AttributeName MultipleSpecifier DefaultNumber Description SEMI
Rule 27    ImplAttrDef -> UINT64 AutoSpecifier NumberRange AttributeName MultipleSpecifier DefaultNumber Description SEMI
Rule 28    ImplAttrDef -> INT64 AutoSpecifier NumberRange AttributeName MultipleSpecifier DefaultNumber Description SEMI
Rule 29    ImplAttrDef -> FLOAT AutoSpecifier FloatRange AttributeName MultipleSpecifier DefaultFloat Description SEMI
Rule 30    ImplAttrDef -> ENUM AutoSpecifier Enumeration AttributeName MultipleSpecifier DefaultName Description SEMI
Rule 31    ImplAttrDef -> STRING AutoSpecifier AttributeName MultipleSpecifier DefaultString Description SEMI
Rule 32    ImplAttrDef -> BOOLEAN AutoSpecifier BoolValues AttributeName MultipleSpecifier DefaultBool Description SEMI
Rule 33    ImplParameterList -> empty
Rule 34    ImplParameterList -> LBRACE ImplDefList RBRACE
Rule 35    ImplDefList -> empty
Rule 36    ImplDefList -> ImplementationDef ImplDefList
Rule 37    AutoSpecifier -> empty
Rule 38    AutoSpecifier -> WITH_AUTO
Rule 39    NumberRange -> empty
Rule 40    NumberRange -> LBRACKET Number TO Number RBRACKET
Rule 41    NumberRange -> LBRACKET NumberList RBRACKET
Rule 42    NumberList -> Number
Rule 43    NumberList -> NumberList COMMA Number
Rule 44    DefaultNumber -> empty
Rule 45    DefaultNumber -> EQUAL Number
Rule 46    DefaultNumber -> EQUAL NO_DEFAULT
Rule 47    DefaultNumber -> EQUAL AUTO
Rule 48    Description -> empty
Rule 49    Description -> COLON String
Rule 50    FloatRange -> empty
Rule 51    FloatRange -> LBRACKET Float TO Float RBRACKET
Rule 52    DefaultFloat -> empty
Rule 53    DefaultFloat -> EQUAL Float
Rule 54    DefaultFloat -> EQUAL NO_DEFAULT
Rule 55    DefaultFloat -> EQUAL AUTO
Rule 56    Enumeration -> LBRACKET EnumerationList RBRACKET
Rule 57    EnumerationList -> Enumerator
Rule 58    EnumerationList -> EnumerationList COMMA Enumerator
Rule 59    Enumerator -> Name Description
Rule 60    Enumerator -> Name ImplParameterList Description
Rule 61    BoolValues -> empty
Rule 62    BoolValues -> LBRACKET TRUE ImplParameterList Description COMMA FALSE ImplParameterList Description RBRACKET
Rule 63    DefaultName -> empty
Rule 64    DefaultName -> EQUAL Name
Rule 65    DefaultName -> EQUAL NO_DEFAULT
Rule 66    DefaultName -> EQUAL AUTO
Rule 67    DefaultString -> empty
Rule 68    DefaultString -> EQUAL String
Rule 69    DefaultString -> EQUAL NO_DEFAULT
Rule 70    DefaultString -> EQUAL AUTO
Rule 71    DefaultBool -> empty
Rule 72    DefaultBool -> EQUAL Boolean
Rule 73    DefaultBool -> EQUAL NO_DEFAULT
Rule 74    DefaultBool -> EQUAL AUTO
Rule 75    ImplRefDef -> ObjectRefType ReferenceName MultipleSpecifier Description SEMI
Rule 76    ObjectRefType -> OS_TYPE
Rule 77    ObjectRefType -> TASK_TYPE
Rule 78    ObjectRefType -> COUNTER_TYPE
Rule 79    ObjectRefType -> ALARM_TYPE
Rule 80    ObjectRefType -> RESOURCE_TYPE
Rule 81    ObjectRefType -> EVENT_TYPE
Rule 82    ObjectRefType -> ISR_TYPE
Rule 83    ObjectRefType -> MESSAGE_TYPE
Rule 84    ObjectRefType -> COM_TYPE
Rule 85    ObjectRefType -> NM_TYPE
Rule 86    ObjectRefType -> APPMODE_TYPE
Rule 87    ObjectRefType -> IPDU_TYPE
Rule 88    ReferenceName -> Name
Rule 89    ReferenceName -> Object
Rule 90    MultipleSpecifier -> empty
Rule 91    MultipleSpecifier -> LBRACKET RBRACKET
Rule 92    ApplicationDefinition -> CPU Name LBRACE ObjectDefinitionList RBRACE Description SEMI
Rule 93    ObjectDefinitionList -> empty
Rule 94    ObjectDefinitionList -> ObjectDefinition
Rule 95    ObjectDefinitionList -> ObjectDefinitionList ObjectDefinition
Rule 96    ObjectDefinition -> ObjectName Description SEMI
Rule 97    ObjectDefinition -> ObjectName LBRACE ParameterList RBRACE Description SEMI
Rule 98    ObjectName -> Object Name
Rule 99    ParameterList -> empty
Rule 100   ParameterList -> Parameter
Rule 101   ParameterList -> ParameterList Parameter
Rule 102   Parameter -> AttributeName EQUAL AttributeValue Description SEMI
Rule 103   AttributeName -> Name
Rule 104   AttributeName -> Object
Rule 105   AttributeValue -> Name
Rule 106   AttributeValue -> Name LBRACE ParameterList RBRACE
Rule 107   AttributeValue -> Boolean
Rule 108   AttributeValue -> Boolean LBRACE ParameterList RBRACE
Rule 109   AttributeValue -> Number
Rule 110   AttributeValue -> Float
Rule 111   AttributeValue -> String
Rule 112   AttributeValue -> AUTO
Rule 113   Name -> IDENT
Rule 114   String -> STRING_LITERAL
Rule 115   Boolean -> FALSE
Rule 116   Boolean -> TRUE
Rule 117   Number -> DecNumber
Rule 118   Number -> HexNumber
Rule 119   DecNumber -> Sign CONST_DEC
Rule 120   Sign -> empty
Rule 121   Sign -> PLUS
Rule 122   Sign -> MINUS
Rule 123   Float -> Sign FLOATING_CONSTANT
Rule 124   HexNumber -> CONST_HEX
Rule 125   empty -> <empty>

Terminals, with rules where they appear

ALARM                : 11
ALARM_TYPE           : 79
APPMODE              : 18
APPMODE_TYPE         : 86
AUTO                 : 47 55 66 70 74 112
BOOLEAN              : 32
COLON                : 49
COM                  : 16
COMMA                : 43 58 62
COM_TYPE             : 84
CONST_DEC            : 119
CONST_HEX            : 124
COUNTER              : 10
COUNTER_TYPE         : 78
CPU                  : 92
ENUM                 : 30
EQUAL                : 2 45 46 47 53 54 55 64 65 66 68 69 70 72 73 74 102
EVENT                : 13
EVENT_TYPE           : 81
FALSE                : 62 115
FLOAT                : 29
FLOATING_CONSTANT    : 123
IDENT                : 113
IMPLEMENTATION       : 4
INT32                : 26
INT64                : 28
IPDU                 : 19
IPDU_TYPE            : 87
ISR                  : 14
ISR_TYPE             : 82
LBRACE               : 4 7 34 92 97 106 108
LBRACKET             : 40 41 51 56 62 91
MESSAGE              : 15
MESSAGE_TYPE         : 83
MINUS                : 122
NM                   : 17
NM_TYPE              : 85
NO_DEFAULT           : 46 54 65 69 73
OIL_VERSION          : 2
OS                   : 8
OS_TYPE              : 76
PLUS                 : 121
RBRACE               : 4 7 34 92 97 106 108
RBRACKET             : 40 41 51 56 62 91
RESOURCE             : 12
RESOURCE_TYPE        : 80
SEMI                 : 2 4 7 25 26 27 28 29 30 31 32 75 92 96 97 102
STRING               : 31
STRING_LITERAL       : 114
TASK                 : 9
TASK_TYPE            : 77
TO                   : 40 51
TRUE                 : 62 116
UINT32               : 25
UINT64               : 27
WITH_AUTO            : 38
error                : 

Nonterminals, with rules where they appear

ApplicationDefinition : 1
AttributeName        : 25 26 27 28 29 30 31 32 102
AttributeValue       : 102
AutoSpecifier        : 25 26 27 28 29 30 31 32
BoolValues           : 32
Boolean              : 72 107 108
DecNumber            : 117
DefaultBool          : 32
DefaultFloat         : 29
DefaultName          : 30
DefaultNumber        : 25 26 27 28
DefaultString        : 31
Description          : 2 4 7 25 26 27 28 29 30 31 32 59 60 62 62 75 92 96 97 102
Enumeration          : 30
EnumerationList      : 56 58
Enumerator           : 57 58
File                 : 0
Float                : 51 51 53 110
FloatRange           : 29
HexNumber            : 118
ImplAttrDef          : 23
ImplDefList          : 34 36
ImplParameterList    : 60 62 62
ImplRefDef           : 24
ImplementationDef    : 21 22 36
ImplementationDefinition : 1
ImplementationList   : 7 22
ImplementationSpec   : 5 6
ImplementationSpecList : 4 6
MultipleSpecifier    : 25 26 27 28 29 30 31 32 75
Name                 : 4 59 60 64 88 92 98 103 105 106
Number               : 40 40 42 43 45 109
NumberList           : 41 43
NumberRange          : 25 26 27 28
Object               : 7 89 98 104
ObjectDefinition     : 94 95
ObjectDefinitionList : 92 95
ObjectName           : 96 97
ObjectRefType        : 75
OilVersion           : 1
Parameter            : 100 101
ParameterList        : 97 101 106 108
ReferenceName        : 75
Sign                 : 119 123
String               : 3 49 68 111
Version              : 2
empty                : 20 33 35 37 39 44 48 50 52 61 63 67 71 90 93 99 120

Parsing method: LALR

state 0

    (0) S' -> . File
    (1) File -> . OilVersion ImplementationDefinition ApplicationDefinition
    (2) OilVersion -> . OIL_VERSION EQUAL Version Description SEMI

    OIL_VERSION     shift and go to state 1

    File                           shift and go to state 2
    OilVersion                     shift and go to state 3

state 1

    (2) OilVersion -> OIL_VERSION . EQUAL Version Description SEMI

    EQUAL           shift and go to state 4


state 2

    (0) S' -> File .



state 3

    (1) File -> OilVersion . ImplementationDefinition ApplicationDefinition
    (4) ImplementationDefinition -> . IMPLEMENTATION Name LBRACE ImplementationSpecList RBRACE Description SEMI

    IMPLEMENTATION  shift and go to state 5

    ImplementationDefinition       shift and go to state 6

state 4

    (2) OilVersion -> OIL_VERSION EQUAL . Version Description SEMI
    (3) Version -> . String
    (114) String -> . STRING_LITERAL

    STRING_LITERAL  shift and go to state 8

    Version                        shift and go to state 9
    String                         shift and go to state 7

state 5

    (4) ImplementationDefinition -> IMPLEMENTATION . Name LBRACE ImplementationSpecList RBRACE Description SEMI
    (113) Name -> . IDENT

    IDENT           shift and go to state 10

    Name                           shift and go to state 11

state 6

    (1) File -> OilVersion ImplementationDefinition . ApplicationDefinition
    (92) ApplicationDefinition -> . CPU Name LBRACE ObjectDefinitionList RBRACE Description SEMI

    CPU             shift and go to state 13

    ApplicationDefinition          shift and go to state 12

state 7

    (3) Version -> String .

    COLON           reduce using rule 3 (Version -> String .)
    SEMI            reduce using rule 3 (Version -> String .)


state 8

    (114) String -> STRING_LITERAL .

    SEMI            reduce using rule 114 (String -> STRING_LITERAL .)
    RBRACKET        reduce using rule 114 (String -> STRING_LITERAL .)
    COMMA           reduce using rule 114 (String -> STRING_LITERAL .)
    COLON           reduce using rule 114 (String -> STRING_LITERAL .)


state 9

    (2) OilVersion -> OIL_VERSION EQUAL Version . Description SEMI
    (48) Description -> . empty
    (49) Description -> . COLON String
    (125) empty -> .

    COLON           shift and go to state 15
    SEMI            reduce using rule 125 (empty -> .)

    Description                    shift and go to state 14
    empty                          shift and go to state 16

state 10

    (113) Name -> IDENT .

    LBRACE          reduce using rule 113 (Name -> IDENT .)
    EQUAL           reduce using rule 113 (Name -> IDENT .)
    COLON           reduce using rule 113 (Name -> IDENT .)
    SEMI            reduce using rule 113 (Name -> IDENT .)
    RBRACKET        reduce using rule 113 (Name -> IDENT .)
    COMMA           reduce using rule 113 (Name -> IDENT .)
    LBRACKET        reduce using rule 113 (Name -> IDENT .)


state 11

    (4) ImplementationDefinition -> IMPLEMENTATION Name . LBRACE ImplementationSpecList RBRACE Description SEMI

    LBRACE          shift and go to state 17


state 12

    (1) File -> OilVersion ImplementationDefinition ApplicationDefinition .

    $end            reduce using rule 1 (File -> OilVersion ImplementationDefinition ApplicationDefinition .)


state 13

    (92) ApplicationDefinition -> CPU . Name LBRACE ObjectDefinitionList RBRACE Description SEMI
    (113) Name -> . IDENT

    IDENT           shift and go to state 10

    Name                           shift and go to state 18

state 14

    (2) OilVersion -> OIL_VERSION EQUAL Version Description . SEMI

    SEMI            shift and go to state 19


state 15

    (49) Description -> COLON . String
    (114) String -> . STRING_LITERAL

    STRING_LITERAL  shift and go to state 8

    String                         shift and go to state 20

state 16

    (48) Description -> empty .

    SEMI            reduce using rule 48 (Description -> empty .)
    RBRACKET        reduce using rule 48 (Description -> empty .)
    COMMA           reduce using rule 48 (Description -> empty .)


state 17

    (4) ImplementationDefinition -> IMPLEMENTATION Name LBRACE . ImplementationSpecList RBRACE Description SEMI
    (5) ImplementationSpecList -> . ImplementationSpec
    (6) ImplementationSpecList -> . ImplementationSpecList ImplementationSpec
    (7) ImplementationSpec -> . Object LBRACE ImplementationList RBRACE Description SEMI
    (8) Object -> . OS
    (9) Object -> . TASK
    (10) Object -> . COUNTER
    (11) Object -> . ALARM
    (12) Object -> . RESOURCE
    (13) Object -> . EVENT
    (14) Object -> . ISR
    (15) Object -> . MESSAGE
    (16) Object -> . COM
    (17) Object -> . NM
    (18) Object -> . APPMODE
    (19) Object -> . IPDU

    OS              shift and go to state 34
    TASK            shift and go to state 26
    COUNTER         shift and go to state 24
    ALARM           shift and go to state 23
    RESOURCE        shift and go to state 27
    EVENT           shift and go to state 35
    ISR             shift and go to state 22
    MESSAGE         shift and go to state 33
    COM             shift and go to state 25
    NM              shift and go to state 32
    APPMODE         shift and go to state 30
    IPDU            shift and go to state 29

    Object                         shift and go to state 28
    ImplementationSpecList         shift and go to state 31
    ImplementationSpec             shift and go to state 21

state 18

    (92) ApplicationDefinition -> CPU Name . LBRACE ObjectDefinitionList RBRACE Description SEMI

    LBRACE          shift and go to state 36


state 19

    (2) OilVersion -> OIL_VERSION EQUAL Version Description SEMI .

    IMPLEMENTATION  reduce using rule 2 (OilVersion -> OIL_VERSION EQUAL Version Description SEMI .)


state 20

    (49) Description -> COLON String .

    SEMI            reduce using rule 49 (Description -> COLON String .)
    RBRACKET        reduce using rule 49 (Description -> COLON String .)
    COMMA           reduce using rule 49 (Description -> COLON String .)


state 21

    (5) ImplementationSpecList -> ImplementationSpec .

    RBRACE          reduce using rule 5 (ImplementationSpecList -> ImplementationSpec .)
    OS              reduce using rule 5 (ImplementationSpecList -> ImplementationSpec .)
    TASK            reduce using rule 5 (ImplementationSpecList -> ImplementationSpec .)
    COUNTER         reduce using rule 5 (ImplementationSpecList -> ImplementationSpec .)
    ALARM           reduce using rule 5 (ImplementationSpecList -> ImplementationSpec .)
    RESOURCE        reduce using rule 5 (ImplementationSpecList -> ImplementationSpec .)
    EVENT           reduce using rule 5 (ImplementationSpecList -> ImplementationSpec .)
    ISR             reduce using rule 5 (ImplementationSpecList -> ImplementationSpec .)
    MESSAGE         reduce using rule 5 (ImplementationSpecList -> ImplementationSpec .)
    COM             reduce using rule 5 (ImplementationSpecList -> ImplementationSpec .)
    NM              reduce using rule 5 (ImplementationSpecList -> ImplementationSpec .)
    APPMODE         reduce using rule 5 (ImplementationSpecList -> ImplementationSpec .)
    IPDU            reduce using rule 5 (ImplementationSpecList -> ImplementationSpec .)


state 22

    (14) Object -> ISR .

    EQUAL           reduce using rule 14 (Object -> ISR .)
    LBRACKET        reduce using rule 14 (Object -> ISR .)
    COLON           reduce using rule 14 (Object -> ISR .)
    SEMI            reduce using rule 14 (Object -> ISR .)
    IDENT           reduce using rule 14 (Object -> ISR .)
    LBRACE          reduce using rule 14 (Object -> ISR .)


state 23

    (11) Object -> ALARM .

    EQUAL           reduce using rule 11 (Object -> ALARM .)
    LBRACKET        reduce using rule 11 (Object -> ALARM .)
    COLON           reduce using rule 11 (Object -> ALARM .)
    SEMI            reduce using rule 11 (Object -> ALARM .)
    IDENT           reduce using rule 11 (Object -> ALARM .)
    LBRACE          reduce using rule 11 (Object -> ALARM .)


state 24

    (10) Object -> COUNTER .

    EQUAL           reduce using rule 10 (Object -> COUNTER .)
    LBRACKET        reduce using rule 10 (Object -> COUNTER .)
    COLON           reduce using rule 10 (Object -> COUNTER .)
    SEMI            reduce using rule 10 (Object -> COUNTER .)
    IDENT           reduce using rule 10 (Object -> COUNTER .)
    LBRACE          reduce using rule 10 (Object -> COUNTER .)


state 25

    (16) Object -> COM .

    EQUAL           reduce using rule 16 (Object -> COM .)
    LBRACKET        reduce using rule 16 (Object -> COM .)
    COLON           reduce using rule 16 (Object -> COM .)
    SEMI            reduce using rule 16 (Object -> COM .)
    IDENT           reduce using rule 16 (Object -> COM .)
    LBRACE          reduce using rule 16 (Object -> COM .)


state 26

    (9) Object -> TASK .

    EQUAL           reduce using rule 9 (Object -> TASK .)
    LBRACKET        reduce using rule 9 (Object -> TASK .)
    COLON           reduce using rule 9 (Object -> TASK .)
    SEMI            reduce using rule 9 (Object -> TASK .)
    IDENT           reduce using rule 9 (Object -> TASK .)
    LBRACE          reduce using rule 9 (Object -> TASK .)


state 27

    (12) Object -> RESOURCE .

    EQUAL           reduce using rule 12 (Object -> RESOURCE .)
    LBRACKET        reduce using rule 12 (Object -> RESOURCE .)
    COLON           reduce using rule 12 (Object -> RESOURCE .)
    SEMI            reduce using rule 12 (Object -> RESOURCE .)
    IDENT           reduce using rule 12 (Object -> RESOURCE .)
    LBRACE          reduce using rule 12 (Object -> RESOURCE .)


state 28

    (7) ImplementationSpec -> Object . LBRACE ImplementationList RBRACE Description SEMI

    LBRACE          shift and go to state 37


state 29

    (19) Object -> IPDU .

    EQUAL           reduce using rule 19 (Object -> IPDU .)
    LBRACKET        reduce using rule 19 (Object -> IPDU .)
    COLON           reduce using rule 19 (Object -> IPDU .)
    SEMI            reduce using rule 19 (Object -> IPDU .)
    IDENT           reduce using rule 19 (Object -> IPDU .)
    LBRACE          reduce using rule 19 (Object -> IPDU .)


state 30

    (18) Object -> APPMODE .

    EQUAL           reduce using rule 18 (Object -> APPMODE .)
    LBRACKET        reduce using rule 18 (Object -> APPMODE .)
    COLON           reduce using rule 18 (Object -> APPMODE .)
    SEMI            reduce using rule 18 (Object -> APPMODE .)
    IDENT           reduce using rule 18 (Object -> APPMODE .)
    LBRACE          reduce using rule 18 (Object -> APPMODE .)


state 31

    (4) ImplementationDefinition -> IMPLEMENTATION Name LBRACE ImplementationSpecList . RBRACE Description SEMI
    (6) ImplementationSpecList -> ImplementationSpecList . ImplementationSpec
    (7) ImplementationSpec -> . Object LBRACE ImplementationList RBRACE Description SEMI
    (8) Object -> . OS
    (9) Object -> . TASK
    (10) Object -> . COUNTER
    (11) Object -> . ALARM
    (12) Object -> . RESOURCE
    (13) Object -> . EVENT
    (14) Object -> . ISR
    (15) Object -> . MESSAGE
    (16) Object -> . COM
    (17) Object -> . NM
    (18) Object -> . APPMODE
    (19) Object -> . IPDU

    RBRACE          shift and go to state 39
    OS              shift and go to state 34
    TASK            shift and go to state 26
    COUNTER         shift and go to state 24
    ALARM           shift and go to state 23
    RESOURCE        shift and go to state 27
    EVENT           shift and go to state 35
    ISR             shift and go to state 22
    MESSAGE         shift and go to state 33
    COM             shift and go to state 25
    NM              shift and go to state 32
    APPMODE         shift and go to state 30
    IPDU            shift and go to state 29
